--- a/airbyte-webapp/src/views/Connector/ConnectorDocumentationLayout/ConnectorDocumentationLayout.module.scss
+++ b/airbyte-webapp/src/views/Connector/ConnectorDocumentationLayout/ConnectorDocumentationLayout.module.scss
@@ -31,12 +31,12 @@
   text-align: center;
 }
 
-.pageContainer {
-  // height: calc(100% - 80px);
-  flex: 1;
+// .pageContainer {
+//   // height: calc(100% - 80px);
+//   flex: 1;
 
-  // height: 1px;
-}
+//   // height: 1px;
+// }
 
 .container {
   overflow: auto;
@@ -73,11 +73,11 @@
   color: colors.$grey-100;
 }
 
-.panelGrabber {
-  // height: calc(100vh - 70px);
-  padding: 6px;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+// .panelGrabber {
+//   // height: calc(100vh - 70px);
+//   padding: 6px;
+//   flex: 1;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
