--- a/airbyte-webapp/src/views/Connection/CatalogTree/StreamHeader.module.scss
+++ b/airbyte-webapp/src/views/Connection/CatalogTree/StreamHeader.module.scss
@@ -16,7 +16,7 @@
 }
 
 .streamRowCheckboxCell {
-  width: 100%;
+  // width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
