--- a/airbyte-integrations/bases/connector-acceptance-test/tools/strictness_level_migration/templates/fail_on_extra_columns/issue.md.j2
+++ b/airbyte-integrations/bases/connector-acceptance-test/tools/strictness_level_migration/templates/fail_on_extra_columns/issue.md.j2
@@ -5,7 +5,7 @@ stream records which contain columns that haven't been declared in the spec.
 {{ connector_name }} currently fails the updated test. Its `acceptance-test-config.yml` was edited with the
 `fail_on_extra_columns: false` parameter in order to avoid this change from making the connector fail CAT.
 
-We want to add the undeclared columns to the spec
+We want to add the undeclared columns to the spec.
 
 **How this will help**:
 - Column selection is currently blocked for connectors that don't declare all columns that they pass. This
@@ -14,9 +14,11 @@ We want to add the undeclared columns to the spec
 - Users will better understand the shape of the data they'll receive, since the columns will match the spec.
 
 ## How
-The following are the results of the failed connector acceptance test:
+The following come from results of the failed connector acceptance test:
 
+```
 {{ test_failure_logs }}
+```
 
 1. Add the missing properties indicated by the `Additional properties are not allowed ('<column>', 'column' were unexpected)` logs to the connector's spec.
 2. Remove `fail_on_extra_columns: false` from the `acceptance-test-config.yml` file.
