CU-3u4cfum - FE: email & verify screen UI

--- a/airbyte-webapp/src/pages/AuthPage/ResetPasswordPage/ResetPasswordPage.module.scss
+++ b/airbyte-webapp/src/pages/AuthPage/ResetPasswordPage/ResetPasswordPage.module.scss
@@ -12,6 +12,25 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
-  width: 33%;
+  height: calc(100% - 110px);
+  width: 80%;
+}
+
+@media screen and (min-width: 769px) {
+  .formContainer {
+    width: 66%;
+    height: 100%;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .formContainer {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .formContainer {
+    width: 36%;
+  }
 }
