--- a/airbyte-webapp/src/pages/AuthPage/components/FormHeaderSection.module.scss
+++ b/airbyte-webapp/src/pages/AuthPage/components/FormHeaderSection.module.scss
@@ -19,6 +19,7 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  margin-top: 10px;
 }
 
 .headRightText {
@@ -59,5 +60,6 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+    margin-top: 0;
   }
 }
