--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -4,7 +4,7 @@
  * work well for content-centric websites.
  */
 
- @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap');
 
 /* You can override the default Infima variables here. */
 :root {
@@ -73,6 +73,13 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
     text-decoration: none;
 }
 
+.navbar__category {
+  font-weight: 200;
+  font-size: 0.8em;
+  opacity: 0.8;
+  padding: 1em var(--ifm-menu-link-padding-horizontal) 0;
+}
+
 .codeBlockContainer_I0IT {
     box-shadow: none !important;
 }
@@ -88,7 +95,7 @@ img {
 }
 
 .menu__link--sublist-caret:after {
-    background: var(--ifm-menu-link-sublist-icon) 50%/1.5rem 1.5rem;
+    background: var(--ifm-menu-link-sublist-icon) 50%/2rem 2rem;
     min-width: 1.25rem;
 }
 
